<resources>
    <string name="app_name">foodies</string>
    <string name="yes">Yes</string>
    <string name="Search_Here">Search Here</string>
    <string name="lets_cook">Lets cook</string>
    <string name="sartrs">starts</string>
    <string name="meals">meals</string>
    <string name="desserts">desserts</string>
    <string name="apple">apple</string>
    <string name="log_out">you are log out</string>
    <string name="unlogin">press for unlogin</string>
    <string name="allow">the serch view its allow for you as a user </string>
    <string name="sentence_login">welcome back</string>
    <string name="just_for">allowed just for register users</string>
    <string name="upload_recipe">upload your on recipe</string>
    <string name="serch_recipe">serch for recips</string>
    <string name="make_sure">please verifed all the detalis and swich </string>
    <string name="tap_for_more">tap for more options</string>
    <string name="tap_for_add_recipe">tap for add a Recipe</string>
    <string name="enter_text">Enter text----></string>
    <string name="No_Match_found">No Match found</string>
    <string name="choose_recipe">choose the kind of the dish</string>
    <string name="look_for_prodacts">look for products to make a recipe</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="desert">Desert</string>
    <string name="start">Opening Dish</string>
    <string name="meal">Main Course</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="instructions">Instructions</string>
    <string name="recipeName">Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="add">Add</string>
    <string name="ingredient_error">Please fill the ingredient first</string>
    <string name="upload_to_server">Upload</string>
    <string name="add_recipe_name">Enter Recipe Name</string>
    <string name="please_choose_an_image">please choose an image</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="sentence_register">Lets join us and start to cook</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your Email</string>
    <string name="password_again">Re-type Password</string>
    <string name="swipe_right_for_login">Tap For Login</string>
    <string name="swipe_left_for_register">Tap For Register</string>
    <string name="failed_register">Registration Is Faild</string>
    <string name="incorrect_pass">The passwords are not the same</string>
    <string name="email_empty">Please Enter Email</string>
    <string name="bad_pass">The password must be at least 7 characters</string>
</resources>