<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:layout_centerVertical="true"
    android:background="@drawable/apron"
    tools:context=".RegisterActivity">


    <ImageView
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="225dp"
        android:src="@drawable/foodies"/>


    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sentence_register"
        android:textSize="17sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="65dp"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="245dp"
        android:layout_height="45dp"
        android:layout_marginStart="65dp"
        android:hint="@string/your_name"
        android:layout_marginTop="25dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:background="@drawable/start"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="245dp"
        android:layout_height="45dp"
        android:hint="@string/email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/start"
        android:layout_marginStart="65dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="245dp"
        android:layout_height="45dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:background="@drawable/start"
        android:layout_marginStart="65dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_repassword"
        android:layout_width="245dp"
        android:layout_height="45dp"
       android:layout_marginStart="65dp"
        android:hint="@string/password_again"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-75dp"
        android:inputType="textPassword"
        android:background="@drawable/start"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="225dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/bj2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:textColor="@android:color/white"
            android:text="@string/login"/>

        <ImageButton
            android:id="@+id/login_move"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/fork_knife"
            android:layout_above="@id/swipeLeft"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_right_for_login"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"/>

    </RelativeLayout>

</LinearLayout>