<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/apron">

    <ImageView
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="215dp"
        android:src="@drawable/foodies"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginStart="25dp"
      android:layout_marginBottom="15dp"
        android:layout_above="@id/tv_subtitle"/>


    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sentence_login"
        android:textSize="17sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="145dp"
        android:layout_above="@id/et_email_login"/>

    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-55dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:layout_above="@id/et_password_login"
        android:background="@drawable/start"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:layout_marginTop="-65dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:background="@drawable/start"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_below="@id/et_password_login"
        android:layout_gravity="center"
        android:background="@drawable/bj2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:textColor="@android:color/white"
        android:text="@string/login"/>

    <ImageButton
        android:id="@+id/register_move"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/fork_knife"
        android:layout_above="@id/swipeRight"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_left_for_register"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>
