<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/borad"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/add_recipe"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="40sp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="-75dp"
        android:layout_marginStart="275dp"
        android:src="@drawable/foodies"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                >
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meal"
                    android:id="@+id/mealCB"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:id="@+id/startCB"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desert"
                    android:id="@+id/desertCB"/>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/foodies"
                android:text="@string/ingredients"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_marginBottom="-30dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:selectAllOnFocus="true"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:text="@string/enter_text"
                    android:layout_marginTop="25dp"
                    android:id="@+id/ingredients_editText"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:singleLine="false"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:layout_marginBottom="20dp"

                    />


            </LinearLayout>

            <!--        <HorizontalScrollView-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="150dp"-->
            <!--            android:scrollbars="none"-->
            <!--            android:layout_weight="1">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:isScrollContainer="true"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:id="@+id/ingredients_tableLayout"
                    />
            </LinearLayout>
            <!--        </HorizontalScrollView>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginBottom="-25dp"
                android:src="@drawable/foodies"
                android:text="@string/instructions"
                android:textAlignment="center"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/instruction"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:layout_gravity="center"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:text="@string/enter_text"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:selectAllOnFocus="true"
                />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/foodies"
                android:textAlignment="center"
                android:text="@string/recipeName"
                android:textSize="20sp"
                android:layout_marginTop="-15dp"

                />



            <EditText
                android:id="@+id/recipe_name"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="0dp"
                android:layout_gravity="center"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:text="@string/enter_text"
                android:textAlignment="center"
                android:selectAllOnFocus="true"
                />

            <Switch
                android:id="@+id/igr_btn"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:thumbTint="@color/colorAccent1"
                android:layout_marginTop="-15dp"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/foodies"
                android:textAlignment="center"
                android:text="@string/make_sure"
                android:textSize="15sp"
                android:layout_marginTop="-5dp"/>

            <ImageView
                android:id="@+id/image"
                android:layout_width="285dp"
                android:layout_height="165dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@android:drawable/ic_menu_gallery"/>

        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/add_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="-85dp"
        android:background="@drawable/fork_knife"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:text="@string/tap_for_add_recipe"
        android:textSize="15sp" />
</LinearLayout>
