<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.recyclerview.widget.RecyclerView


        android:id="@+id/recycle"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_view"
        android:visibility="visible"/>
    <FrameLayout
        android:id="@+id/fragment_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <TextView
        android:id="@+id/tap_for_more"
        android:visibility="visible"
        android:layout_width="225dp"
        android:layout_height="15dp"
        android:text="@string/tap_for_more"
        android:textSize="12sp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="50dp"/>

<ImageButton
    android:id="@+id/more_option"
    android:background="@drawable/fork_knife"
    android:layout_width="45dp"
    android:layout_height="45dp"
    android:layout_marginStart="255dp"
    android:layout_marginTop="5dp"
    />
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

        <ImageButton
            android:id="@+id/start_btn"
            android:layout_gravity="center"
            android:layout_width="254dp"
            android:layout_height="135dp"
            android:layout_marginTop="85dp"
            android:background="@drawable/starts"
            android:visibility="visible" />

        <TextView
            android:id="@+id/text_starts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:text="@string/sartrs"
            android:textSize="20sp"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/mains_btn"
            android:layout_width="254dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/meal"
            android:text="@string/meals"
            android:visibility="visible" />

        <TextView
            android:id="@+id/text_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:text="@string/meals"
            android:textSize="20sp"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/dessert_btn"
            android:layout_width="254dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/dessert"
            android:visibility="visible" />

        <TextView
            android:id="@+id/text_dessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:text="@string/desserts"
            android:textSize="20sp"
            android:visibility="visible" />

    </LinearLayout>
</RelativeLayout>


